tests/ui/single-use-lifetime/one-use-in-inherent-method-argument.stderr
error: lifetime parameter `'f` only used once
  --> $DIR/one-use-in-inherent-method-argument.rs:11:6
   |
LL | impl<'f> Foo<'f> {
   |      ^^      -- ...is used only here
   |      |
   |      this lifetime...
   |
note: the lint level is defined here
  --> $DIR/one-use-in-inherent-method-argument.rs:1:9
   |
LL | #![deny(single_use_lifetimes)]
   |         ^^^^^^^^^^^^^^^^^^^^
help: elide the single-use lifetime
   |
LL - impl<'f> Foo<'f> {
LL + impl Foo<'_> {
   |

error: lifetime parameter `'a` only used once
  --> $DIR/one-use-in-inherent-method-argument.rs:13:19
   |
LL |     fn inherent_a<'a>(&self, data: &'a u32) {
   |                   ^^                -- ...is used only here
   |                   |
   |                   this lifetime...
   |
help: elide the single-use lifetime
   |
LL -     fn inherent_a<'a>(&self, data: &'a u32) {
LL +     fn inherent_a(&self, data: &u32) {
   |

error: aborting due to 2 previous errors

